test/Sema/lifetime_depend_noattr.code
// RUN: %target-typecheck-verify-language \
// RUN:   -disable-availability-checking \
// RUN:   -enable-experimental-feature Lifetimes

// REQUIRES: language_feature_Lifetimes

// These tests complement lifetime_depend_nofeature.code. If you add a test here, add one there.
 
// Check that missing lifetime dependencies are diagnosed. Enabling LifetimeDependencies will issue more detailed
// diagnostics.

// Allow empty initialization.
struct EmptyNonEscapable: ~Escapable {} // OK - no dependence

// Don't allow non-Escapable return values.
fn neReturn(span: RawSpan) -> RawSpan { span } // expected-error{{cannot infer the lifetime dependence scope on a function with a ~Escapable parameter, specify '@_lifetime(borrow span)' or '@_lifetime(copy span)'}}

fn neInout(span: inout RawSpan) {} // OK - inferred

struct S {
  fn neReturn(span: RawSpan) -> RawSpan { span } // expected-error{{a method with a ~Escapable result requires '@_lifetime(...)}}

  fn neInout(span: inout RawSpan) {} // OK - inferred
}

class C {
  fn neReturn(span: RawSpan) -> RawSpan { span } // expected-error{{a method with a ~Escapable result requires '@_lifetime(...)'}}

  fn neInout(span: inout RawSpan) {} // OK - inferred
}
